# cretro

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  run-clang-format.sh  run-clang-tidy.sh  sonar-project.properties  sta.sh
.github/workflows/: build.yml
roms/: bat.ch8
src/: ch8.c  ch8.h  cli.c  cli.h  cpu.c  cpu.h  cpu_opcodes.c  cpu_opcodes.h  cretro.c  debug.c  debug.h  lcd.c  lcd.h  logging.c  logging.h  main.c  sound.c  sound.h  timer.c  timer.h
